--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
     --card-bg-color: #ffffff;
     
     /* Fonts */
-    --font-heading: 'Lato', sans-serif;
+    --font-heading: 'Headland One', serif;
     --font-body: 'Lato', sans-serif;
 }
 
