--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
     --white-color: #ffffff;
     --dark-text-color: #212121;
     --light-text-color: #B0B0B0;
-    --card-bg-color: #ffffff;
+    --card-bg-color: #EEE2CB;
     
     /* Fonts */
     --font-heading: 'Headland One', serif;
