--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@
     --accent-color: #FFCE51;    /* Gold */
 
     /* --- Shared Variables (These usually don't need to change) --- */
-    --light-bg-color: #FFFBEA;
+    --light-bg-color: #FFFFFF;
     --white-color: #ffffff;
     --dark-text-color: #212121;
     --light-text-color: #B0B0B0;
-    --card-bg-color: #EEE2CB;
+    --card-bg-color: #FFFBEA;
     
     /* Fonts */
     --font-heading: 'Headland One', serif;
