--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,7 @@ header p {
 
 /* --- 4. Navigation --- */
 nav {
-    background-color: var(--primary-color); /* Adjusted for new primary color */
+    background-color: rgba(10, 10, 10, 0.7); /* Adjusted for new primary color */
     backdrop-filter: blur(5px);
     position: sticky;
     top: 0;
